--- a/css/header.css
+++ b/css/header.css
@@ -15,16 +15,19 @@ header{
         width: 50%;
         justify-content: center;
         align-items: center;
-        border: 1px solid var(--bdr-color);
-        background-color: var(--bg-color);
-        border-radius: 20px;
-        padding: 10px;
     
     & ul{
         display: flex;
         list-style: none;
+        width: 300px;
         align-items: center;
         justify-content: center;
+        border: 1px solid var(--bdr-color);
+        background-color: var(--bg-color);
+        border-radius: 20px;
+        padding: 10px;
+        position: relative;
+        opacity: .8;
         gap: 20px;
 
     & div{
@@ -34,17 +37,24 @@ header{
         gap: 20px;
 
     & li{
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         font-weight: 500;
         color: var(--fnt-color);
         transition: 0.5s;
+        outline: none;
         cursor: pointer;
+        opacity: .6;
 
+        &:hover{
+            color: var(--hover-color);
+            transition: .7s;
+            transform: scale(1.4);
+            padding: 0 5px;
+            opacity: 1;
+        }
     & a{
         text-decoration: none;
         color: var(--fnt-color);
-
-
 
                     }
                 }
