--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,21 @@
 main{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
     background-color: var(--bg-color-2);
     
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    padding: 30px 0;
+    justify-content: center;
+    align-items: center;
+
 }
