--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,21 @@ main{
 }
 
 section{
-    display: flex;
-    flex-direction: column;
     width: 100%;
-    height: auto;
-    padding: 30px 0;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+    position: relative;
 
+
+    & .background-video{
+        width: 100%;
+        height: 100%;
+        position: absolute;    
+
+    & video{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        }
+    }
 }
