--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('footer.css');
 @import url('header.css');
 @import url('main.css');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -12,7 +11,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--bg-color-2);
 }
 
@@ -28,20 +27,4 @@ body{
     --btn-color: #FFF;
     --btn-hover: #FFF;
     --btn-bg: #000;
-}
-
-
-@media (max-width: 640px) {
-    body{
-
-    }
-
-
-}
-
-    @media (max-width: 960px) {
-        body{
-        
-        }
-    
 }
