--- a/css/header.css
+++ b/css/header.css
@@ -1,25 +1,30 @@
+/* Tela Mobile First - Aparelhos pequenos, como celulares */
+
+i{
+    font-size: 20px;
+}
 header{
     width: 100%;
     height: 100px;
     display: flex;
-    padding: 0 50px;
+    padding: 0 1rem;
     align-items: center;
     justify-content: center;
     position: fixed;
     top: 0;
     z-index: 1000;
-    transition: 0.5s;
 
     & nav{
         display: flex;
-        width: 50%;
+        width: 250px;
         justify-content: center;
         align-items: center;
+        backdrop-filter: blur(10px);
     
     & ul{
         display: flex;
         list-style: none;
-        width: 300px;
+        width: 100%;
         align-items: center;
         justify-content: center;
         border: 1px solid var(--bdr-color);
@@ -37,7 +42,6 @@ header{
         gap: 20px;
 
     & li{
-        font-size: 1.4rem;
         font-weight: 500;
         color: var(--fnt-color);
         transition: 0.5s;
@@ -46,17 +50,110 @@ header{
         opacity: .6;
 
         &:hover{
-            color: var(--hover-color);
             transition: .7s;
             transform: scale(1.4);
             padding: 0 5px;
             opacity: 1;
         }
+
     & a{
         text-decoration: none;
         color: var(--fnt-color);
-
                     }
+                }
+            }
+        }
+    }
+}
+/* Tela para aparelhos de tamanho médio, como tablets */
+@media (min-width: 640px) and (max-width: 1023px){
+    i{
+        font-size: 26px;
+    }
+    header{
+        width: 100%;
+        height: 125px;
+        display: flex;
+        padding: 0 1rem;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 0;
+        z-index: 1000;
+
+        & nav{
+            display: flex;
+            width: 350px;
+            justify-content: center;
+            align-items: center;
+        
+        & ul{
+            display: flex;
+            list-style: none;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid var(--bdr-color);
+            background-color: var(--bg-color);
+            border-radius: 20px;
+            padding: 10px;
+            position: relative;
+            opacity: .8;
+            gap: 26px;
+    
+        & div{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 25px;
+                }
+            }
+        }
+    }
+}
+
+/* Tela par aaparelhos grandes, como desktops, notebooks */
+@media (min-width: 1024px){
+    i{
+        font-size: 26px;
+    }
+    header{
+        width: 100%;
+        height: 125px;
+        display: flex;
+        padding: 0 1rem;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 0;
+        z-index: 1000;
+
+        & nav{
+            display: flex;
+            width: 350px;
+            justify-content: center;
+            align-items: center;
+        
+        & ul{
+            display: flex;
+            list-style: none;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid var(--bdr-color);
+            background-color: var(--bg-color);
+            border-radius: 20px;
+            padding: 10px;
+            position: relative;
+            opacity: .8;
+            gap: 26px;
+    
+        & div{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 25px;
+            
                 }
             }
         }
