--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,10 @@ section{
     height: 100vh;
     position: relative;
 
-
     & .background-video{
         width: 100%;
         height: 100%;
-        position: absolute;    
+        position: absolute; 
 
     & video{
         width: 100%;
@@ -27,4 +26,128 @@ section{
         object-position: center;
         }
     }
+}
+
+h1{
+    font-size: 20px;
+}
+p{
+    font-size: 12px;
+    line-height: 20px;
+}
+h2{
+    font-size: 18px;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    width: 100%;
+    height: 400px;
+    overflow: scroll;
+
+    & div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 100;
+        margin-top: 700px;
+        gap: 1rem;
+        background-color: var(--bg-color);
+        backdrop-filter: blur(5px);
+        border-radius: 20px;
+        padding: 20px;
+    }
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    width: 100%;
+    height: auto;
+    gap: 1rem;
+
+    & div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 100;
+        gap: 1rem;
+        background-color: var(--bg-color);  
+        backdrop-filter: blur(5px);
+        border-radius: 20px;
+        text-align: center;
+        padding: 20px;
+    }
+}
+
+.swiper{
+    display: flex;
+    width: 100% !important;
+    overflow-x: hidden;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+
+
+    & .swiper-wrapper{
+    display: flex;
+    gap: 1rem;
+    width: 100% !important;
+    align-items: center;
+
+    & .swiper-slide{
+        display: flex;
+        flex-direction: column;
+        background-color: var(--bg-color-3);
+        width: 100px !important;
+        height: 100px !important;
+        border-radius: 20px;
+        transition: all .35s;
+        
+        & :hover{
+            transition: .5s;
+            background-color: var(--bg-color);
+            transform: scale(1.2);
+            border-radius: 20px;
+        }
+
+        & a{
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            height: 100px;
+            width: 100px;
+            padding: 5px;
+            justify-content: space-between;
+            align-items: center;
+            text-decoration: none;
+            gap: 5px;
+            overflow: scroll;
+
+                &::-webkit-scrollbar{
+                    display: none;
+                }
+
+                & div{
+                    pointer-events: none;
+                }
+                & h2{
+                    font-size: 16px;
+                }
+                & p{
+                    font-size: 10px;
+                }
+            }
+        }
+    }
+}
+.swiper-pagination{
+    backdrop-filter: blur(10px);
 }
