--- a/exercicios/estilos/footer.css
+++ b/exercicios/estilos/footer.css
@@ -5,6 +5,7 @@ footer{
     text-align: center;
     width: 100%;
     height: auto;
+    padding: 10px;
 
     & section{
 
@@ -12,10 +13,10 @@ footer{
 
 
             & h2{
-                font-size: 18px;
+                font-size: 26px;
             }
             & p{
-                font-size: 14px;
+                font-size: 16px;
             }
         }
     }
