--- a/exercicios/estilos/header.css
+++ b/exercicios/estilos/header.css
@@ -3,6 +3,7 @@ header{
     width: 100%;
     height: 100px;
     align-items: center;
+    border-bottom: 1px solid var(--bdr-color);
 }
 nav{
     display: flex;
@@ -24,6 +25,13 @@ li{
     font-size: 2rem;
     text-decoration: none;
     opacity: .7;
+
+    & a{
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--fnt-color);
+    }
 }
 li:hover{
     opacity: 1;
