--- a/exercicios/estilos/main.css
+++ b/exercicios/estilos/main.css
@@ -2,7 +2,16 @@ main{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    margin-bottom: auto;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 .exercise{
@@ -22,8 +31,16 @@ form{
     display: flex;
     padding: 20px;
     gap: 5px;
+    justify-content: center;
+    align-items: center;
 
     & input{
-        width: 100px;
+        width: auto;
+        height: 30px;
     }
+}
+
+p{
+    font-size: 16px;
+    padding: 20px;
 }
