adding last javascript exercises and adding responsivity

--- a/css/header.css
+++ b/css/header.css
@@ -20,6 +20,7 @@ header{
         justify-content: center;
         align-items: center;
         backdrop-filter: blur(10px);
+        border-radius: 20px;
     
     & ul{
         display: flex;
