--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,13 @@ a:hover{
     opacity: 1;
 }
 h1{
-    font-size: 28px;
+    font-size: 20px;
 }
 h2{
-    font-size: 24px;
+    font-size: 16px;
 }
 p{
-    font-size: 18px;
+    font-size: 12px;
 }
 .content-separator{
     display: flex;
@@ -53,12 +53,13 @@ p{
     z-index: 1;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
     align-items: center;
     height: auto;
     gap: 1rem;
     padding: 20px;
     opacity: .9;
+    margin-top: 50px;
 }
 
 .content-title{
@@ -77,22 +78,153 @@ p{
 .content-description{
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1rem;
     background-color: var(--bg-color);
     padding: 20px;
     border-radius: 20px;
 }
 
 .content-cards{
-    display: grid;
-    grid-template-columns: 200px 200px 200px;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: auto;
-    justify-content: space-evenly;
+    height: 80px;
+    gap: 20px;
+    overflow-y: scroll;
+
 }
 
 .card{
     background-color: var(--bg-color);
-    padding: 15px;
-    border-radius: 10px;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+@media (min-width:640px) and (max-width:1023px){
+    
+    h1{
+        font-size: 26px;
+    }
+    h2{
+        font-size: 20px;
+    }
+    p{
+        font-size: 16px;
+    }
+    
+    
+    .content-cards{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100px;
+        gap: 20px;
+        overflow-y: scroll;
+    
+    }
+
+}
+
+@media (min-width:1024px){
+
+    main{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    a{
+        text-decoration: none;
+        opacity: .9;
+    }
+    a:hover{
+        transition: .8s;
+        transform: scale(1.1);
+        opacity: 1;
+    }
+    h1{
+        font-size: 28px;
+    }
+    h2{
+        font-size: 24px;
+    }
+    p{
+        font-size: 18px;
+    }
+    .content-separator{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    
+    .video-background{
+        position: absolute;
+        z-index: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+    
+    .video{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .content{
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        align-items: center;
+        height: auto;
+        gap: 1rem;
+        padding: 20px;
+        opacity: .9;
+    }
+    
+    .content-title{
+        background-color: var(--bg-color);
+        border-radius: 20px;
+        padding: 20px;
+        border: none;
+        width: 100%;
+        text-align: center;
+    
+        & h1{
+            color: var(--fnt-color2);
+        }
+    }
+    
+    .content-description{
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        background-color: var(--bg-color);
+        padding: 20px;
+        border-radius: 20px;
+    }
+    
+    .content-cards{
+        display: grid;
+        grid-template-columns: 200px 200px 200px;
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
+    .card{
+        background-color: var(--bg-color);
+        padding: 15px;
+        border-radius: 20px;
+    }    
+
 }
