--- a/exercicios/estilos/main.css
+++ b/exercicios/estilos/main.css
@@ -11,21 +11,44 @@ main{
 .exercise{
     padding: 1rem;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    height: 300px;
+    height: 500px;
     border-bottom: 1px solid var(--bdr-color);
 }
 
 .exercise-title{
     width: 250px;
+
+    & h1{
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    & p{
+        font-size: 14px;
+        font-weight: 400;
+    }
 }
 
 form{
     display: flex;
-    gap: 20px;
+    flex-direction: column;
+    gap: 5px;
     align-items: center;
+    padding: 20px;
+
+    & input{
+        width: 100px;
+        padding: 5px;
+        border-radius: 10px;
+        border: 1px solid var(--bdr-color);
+    }
+    & h1{
+        font-size: 10px;
+    }
 
 }
 
@@ -52,7 +75,7 @@ form{
 
             & p{
                 font-size: 20px;
-                text-align: justify;
+                text-align: center;
                 font-weight: 600;
             }
 
