--- a/exercicios/estilos/main.css
+++ b/exercicios/estilos/main.css
@@ -37,6 +37,7 @@ form{
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: 100%;
     align-items: center;
     padding: 20px;
 
