--- a/exercicios/estilos/main.css
+++ b/exercicios/estilos/main.css
@@ -58,6 +58,12 @@ form{
     }
 }
 
+#caixa-grande{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+
 .main{
     display: flex;
     width: 100%;
@@ -69,10 +75,13 @@ form{
     & section{
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         height: 100%;
         width: 100%;
         justify-content: space-between;
-        gap: 20px;
+        gap: 40px;
+        padding: 50px;
 
         & div{
             background-color: #f1f1f1;
@@ -81,8 +90,9 @@ form{
 
             & p{
                 font-size: 20px;
-                text-align: center;
+                text-align: left;
                 font-weight: 600;
+                padding: 10px;
             }
 
             & h1{
@@ -107,7 +117,6 @@ form{
 
     }
 }
-
 
 @media (min-width:640px) and (max-width:1023px){
     
