--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ p{
     background-color: var(--bg-color);
     padding: 10px;
     border-radius: 20px;
+    height: 75px;
 }
 
 @media (min-width:640px) and (max-width:1023px){
@@ -223,8 +224,9 @@ p{
     
     .card{
         background-color: var(--bg-color);
-        padding: 15px;
+        padding: 10px;
         border-radius: 20px;
+        height: 120px;
     }    
 
 }
